# zero_shot_classifier

./: README.md  pyproject.toml  requirements.txt
backend/: api.py  config.py  logger.py  main.py  model.py  schemas.py
frontend/: api_client.py  app.py  ui.py
test/: test_api.py  test_logger.py  test_model.py  test_schemas.py
